JBTM-223 Different recovery registration method